# standardize-repo-settings

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
requirements/: requirements-dev.txt  requirements.txt
src/reichlab_repo_utils/: __init__.py  add_repo_rulesets.py  archive_repos.py  get_hub_stats.py  list_repos.py
src/reichlab_repo_utils/data/hub_stats/: FluSight-forecast-hub.parquet  RespiCompass.parquet  ari-forecast-hub.parquet  flu-forecast-hub.parquet  flusight_hub_archive.parquet  hub_stats.csv  hub_stats_summary.csv  rsv-forecast-hub.parquet  variant-nowcast-hub.parquet  wnvca-2024.parquet
src/reichlab_repo_utils/rulesets/: reichlab_default_branch_protections.json
src/reichlab_repo_utils/util/: logs.py  repo.py  session.py
src/standardize_repo_settings/: add_repo_rulesets.py  app.py  archive_repos.py
src/standardize_repo_settings/util/: logs.py  session.py
tests/reichlab_python_template/: test_app.py
tests/reichlab_python_template/unit/util/: test_date.py
