[project]
name = "standardize-repo-settings"
description = "Standardize GitHub repository settings"
license = {text = "MIT License"}
readme = "README.md"
requires-python = '>=3.10'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

dependencies = [
    "requests",
    "rich",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]

[project.entry-points."console_scripts"]
add_default_rulesets = "standardize_repo_settings.add_repo_rulesets:main"
archive_repos = "standardize_repo_settings.archive_repos:main"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[tools.setuptools]
packages = ["standardize_repo_settings"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.dynamic]
version = {attr = "standardize_repo_settings.__version__"}
