[project]
name = "reichlab-repo-utils"
description = "Standardize GitHub repository settings"
license = {text = "MIT License"}
readme = "README.md"
requires-python = '>=3.10'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

dependencies = [
    "requests",
    "rich",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
    "types-requests",
]

[project.entry-points."console_scripts"]
add_default_rulesets = "reichlab_repo_utils.add_repo_rulesets:main"
archive_repos = "reichlab_repo_utils.archive_repos:main"
list_repos = "reichlab_repo_utils.list_repos:main"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[tools.setuptools]
packages = ["reichlab_repo_utils"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.dynamic]
version = {attr = "reichlab_repo_utils.__version__"}

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rich.*"]
follow_imports = "skip"
